--- a/style.css
+++ b/style.css
@@ -1,26 +1,40 @@
 body {
     background-color: rgb(29, 193, 211);
-    font-family: Arial, Helvetica, sans-serif;
-
+    
 }
 
 img {
     max-width: 200px;
     max-height: 200px;
 }
+button {
+    background-color: lightpink;
+    
+}
 
 
 
+#images {
+    display: grid;
+    grid: center;
+    grid-template-columns: .75fr .75fr .75fr;
+}
 
 h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(200, 65, 99);
     text-align: center;
     font-size: 65px;
+    padding: 7px;
 }
 
-h2 {text-align: center;
-
-}#image-selection {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+h2 {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: purple;
+    font-size: 40px;
 }
+
+
+
+
+  
